--- a/app/src/main/res/drawable/selector_button_white.xml
+++ b/app/src/main/res/drawable/selector_button_white.xml
@@ -13,17 +13,38 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-<ripple xmlns:android="http://schemas.android.com/apk/res/android"
-        android:color="@color/practice_item_sel">
-    <item>
-        <selector>
-            <item android:state_pressed="true">
-                <color android:color="@color/practice_item_sel" />
-            </item>
-            <item>
-                <color android:color="@android:color/white" />
-            </item>
-        </selector>
+    <item android:state_selected="true">
+        <shape>
+            <gradient
+                android:startColor="@color/practice_item_sel"
+                android:endColor="@color/practice_item_sel"
+                android:angle="270" />
+            <stroke
+                android:width="7dp"
+                android:color="@color/practice_item_sel" />
+            <corners
+                android:radius="3dp" />
+
+        </shape>
     </item>
-</ripple>
+    <item android:state_selected="false">
+        <shape>
+            <gradient
+                android:startColor="@color/transparent"
+                android:endColor="@color/transparent"
+                android:angle="270" />
+            <stroke
+                android:width="7dp"
+                android:color="@color/transparent" />
+            <corners
+                android:radius="3dp" />
+            <padding
+                android:left="10dp"
+                android:top="10dp"
+                android:right="10dp"
+                android:bottom="10dp" />
+        </shape>
+    </item>
+</selector>
