--- a/app/src/main/res/layout/practice_show_sign.xml
+++ b/app/src/main/res/layout/practice_show_sign.xml
@@ -30,6 +30,7 @@
                 app:controller_layout_id="@layout/signplayer_custom_playback_control"
                 app:use_controller="true"
                 app:practiceVideo="@{practice.getVideo()}"
+                app:play="@{true}"
                 />
         </FrameLayout>
 
