--- a/app/src/main/res/layout/practice_translate_video.xml
+++ b/app/src/main/res/layout/practice_translate_video.xml
@@ -27,6 +27,7 @@
             app:controller_layout_id="@layout/signplayer_custom_playback_control"
             app:use_controller="true"
             app:practiceVideo="@{practice.getVideo()}"
+            app:play="@{true}"
             />
 
         <com.diezsiete.lscapp.ui.widget.wordselector.WordSelectorView
