--- a/app/src/main/res/drawable/answer_danger_style.xml
+++ b/app/src/main/res/drawable/answer_danger_style.xml
@@ -4,8 +4,8 @@
     <item>
         <shape>
             <gradient
-                android:startColor="#FFFFFF"
-                android:endColor="#FFFFFF"
+                android:startColor="#dd446d"
+                android:endColor="#dd446d"
                 android:angle="270" />
             <stroke
                 android:width="4dp"
