--- a/app/src/main/res/layout/fragment_level_selection.xml
+++ b/app/src/main/res/layout/fragment_level_selection.xml
@@ -2,6 +2,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+        <variable
+            name="resource"
+            type="com.diezsiete.lscapp.vo.Resource" />
+        <variable name="callback" type="com.diezsiete.lscapp.ui.common.RetryCallback"/>
+    </data>
+
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -17,6 +24,17 @@
             app:layoutManager="android.support.v7.widget.LinearLayoutManager"
             android:transitionGroup="false"
             app:spanCount="2" tools:ignore="UnusedAttribute" />
+
+        <include layout="@layout/loading_state"
+            app:resource="@{resource}"
+            app:callback="@{() -> callback.retry()}"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="8dp" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent"/>
 
     </FrameLayout>
 </layout>
