--- a/app/src/main/res/layout/practice_answer_message.xml
+++ b/app/src/main/res/layout/practice_answer_message.xml
@@ -18,11 +18,10 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/practice_answer_back"
         android:visibility="@{answerMessage != null ? View.VISIBLE : View.INVISIBLE}"
         >
 
-        <ImageButton
+        <!--<ImageButton
             android:id="@+id/show_next"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -34,33 +33,55 @@
             android:onClick="@{() -> viewmodel.setShowNext()}"
             android:layout_margin="@dimen/spacing_single"
             app:layout_constraintBottom_toBottomOf="parent"
+            />-->
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:drawableEnd="@drawable/ic_arrow_forward_white"
+            android:layout_alignParentBottom="true"
+            android:padding="@dimen/spacing_double"
+            android:background="@drawable/button_style"
+            android:backgroundTint="@{answerMessage.status == AnswerMessage.SUCCESS ? @color/answer_success : @color/colorAccent}"
+            android:onClick="@{() -> viewmodel.setShowNext()}"
+            android:layout_margin="@dimen/spacing_single"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:text="@{answerMessage.status == AnswerMessage.SUCCESS ? @string/practice_success_message : @string/practice_warning_message}"
+            android:textColor="@android:color/white"
+            android:gravity="center"
+            android:textAllCaps="false"
             />
 
 
-        <LinearLayout
+        <!--<LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/spacing_single"
             android:layout_marginTop="@dimen/spacing_quadruple"
             android:layout_marginEnd="@dimen/spacing_single"
             android:background="@{answerMessage.status == AnswerMessage.SUCCESS ? @drawable/answer_success_style : @drawable/answer_danger_style}"
+            android:elevation="4dp"
             android:orientation="vertical"
             android:padding="@dimen/spacing_double"
-            android:elevation="4dp"
-            app:layout_constraintStart_toStartOf="parent">
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@{answerMessage.status == AnswerMessage.SUCCESS ? @string/practice_success_message : @string/practice_warning_message}" />
+                android:text="@{answerMessage.status == AnswerMessage.SUCCESS ? @string/practice_success_message : @string/practice_warning_message}"
+                android:gravity="center"
+                android:textSize="16sp"
+                android:textColor="@android:color/white"
+                />-->
             <!--
             <TextView
                 android:id="@+id/answer_message_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text='@{"Respuesta : " + answerMessage.answer}' />
-            -->
-        </LinearLayout>
+
+        </LinearLayout>-->
 
 
     </android.support.constraint.ConstraintLayout>
