--- a/app/src/main/res/layout/practice_which_one_videos.xml
+++ b/app/src/main/res/layout/practice_which_one_videos.xml
@@ -1,9 +1,16 @@
 <layout xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    >
+
+    <data>
+        <variable
+            name="practice"
+            type="com.diezsiete.lscapp.vo.PracticeWithData" />
+    </data>
 
 
-    <android.support.v7.widget.RecyclerView
+    <com.diezsiete.lscapp.ui.view.LSCRecyclerView
         android:id="@+id/grid_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -12,5 +19,6 @@
         app:layoutManager="android.support.v7.widget.GridLayoutManager"
         android:transitionGroup="false"
         app:spanCount="2" tools:ignore="UnusedAttribute"
+        app:practice="@{practice}"
         />
 </layout>
