--- a/app/src/main/res/layout/signplayer_custom_playback_control.xml
+++ b/app/src/main/res/layout/signplayer_custom_playback_control.xml
@@ -31,7 +31,8 @@
         android:padding="0dp"
         android:layout_marginStart="-12dp"
         android:layout_marginEnd="-12dp"
-        app:bar_height="6dp"
+        app:bar_height="3dp"
+        android:layout_marginBottom="-2dp"
         app:scrubber_enabled_size="0dp"
         android:layout_gravity="bottom"/>
 
