--- a/app/src/main/res/layout/signplayer_custom_playback_control_small.xml
+++ b/app/src/main/res/layout/signplayer_custom_playback_control_small.xml
@@ -31,6 +31,7 @@
         android:padding="0dp"
         android:layout_marginStart="0dp"
         android:layout_marginEnd="0dp"
+        android:layout_marginBottom="-2dp"
         app:bar_height="3dp"
         app:scrubber_enabled_size="0dp"
         android:layout_gravity="bottom"/>
