SignCamera mejorada, aun falta probar los permisos

--- a/app/src/main/res/layout/fragment_lesson.xml
+++ b/app/src/main/res/layout/fragment_lesson.xml
@@ -114,8 +114,7 @@
             android:textColor="@android:color/white"
             android:layout_alignParentBottom="true"
             android:padding="@dimen/spacing_double"
-            android:background="@drawable/button_style"
-            android:backgroundTint="@{lesson.color}"
+            app:backgroundButton="@{lesson.color}"
             android:layout_margin="@dimen/spacing_single"
             android:visibility="gone"
             android:alpha="0"
