--- a/app/src/main/res/layout/fragment_level.xml
+++ b/app/src/main/res/layout/fragment_level.xml
@@ -4,41 +4,63 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
     <data>
         <variable name="level" type="com.diezsiete.lscapp.vo.Level"/>
+        <variable
+            name="resource"
+            type="com.diezsiete.lscapp.vo.Resource" />
+        <variable name="callback" type="com.diezsiete.lscapp.ui.common.RetryCallback"/>
     </data>
-    <LinearLayout android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="?android:windowBackground"
-        android:orientation="vertical">
 
 
 
-
-        <TextView
-            android:id="@+id/lessons_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/lessons"
-            style="@style/Base.TextAppearance.AppCompat.Widget.ActionBar.Title"
-            android:gravity="center"
-            android:background="@color/lesson_title_background"
-            android:textColor="@android:color/white"
-            android:padding="@dimen/spacing_simple"
-            android:elevation="2dp"
-             />
-
-        <android.support.v7.widget.RecyclerView
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            xmlns:tools="http://schemas.android.com/tools"
-            android:id="@+id/lessons"
+        <android.support.v7.widget.LinearLayoutCompat
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="@dimen/spacing_nano"
-            android:clipToPadding="false"
-            android:scrollbarStyle="outsideOverlay"
-            android:scrollbars="vertical"
-            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
-            android:transitionGroup="false"
-            app:spanCount="2" tools:ignore="UnusedAttribute" />
-    </LinearLayout>
+            android:orientation="vertical"
+            >
+            <TextView
+                android:id="@+id/lessons_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/lessons"
+                style="@style/Base.TextAppearance.AppCompat.Widget.ActionBar.Title"
+                android:gravity="center"
+                android:background="@color/lesson_title_background"
+                android:textColor="@android:color/white"
+                android:padding="@dimen/spacing_simple"
+                android:elevation="2dp"
+                 />
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <android.support.v7.widget.RecyclerView
+                    xmlns:android="http://schemas.android.com/apk/res/android"
+                    xmlns:app="http://schemas.android.com/apk/res-auto"
+                    xmlns:tools="http://schemas.android.com/tools"
+                    android:id="@+id/lessons"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:padding="@dimen/spacing_nano"
+                    android:clipToPadding="false"
+                    android:scrollbarStyle="outsideOverlay"
+                    android:scrollbars="vertical"
+                    app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+                    android:transitionGroup="false"
+                    app:spanCount="2" tools:ignore="UnusedAttribute" />
+
+
+                <include layout="@layout/loading_state"
+                    app:resource="@{resource}"
+                    app:callback="@{() -> callback.retry()}"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="8dp" app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_marginBottom="8dp" android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toTopOf="parent"/>
+
+            </FrameLayout>
+        </android.support.v7.widget.LinearLayoutCompat>
+
 </layout>
