Modificaciones en presentacion de niveles, lecciones y wordSelector

--- a/app/src/main/res/drawable/word_selector_back.xml
+++ b/app/src/main/res/drawable/word_selector_back.xml
@@ -11,7 +11,7 @@
     <!-- Upper rectangle (background color) -->
     <item android:top="2dp">
         <shape android:shape="rectangle">
-            <solid android:color="#FFFFFF" />
+            <solid android:color="#fffafafa" />
         </shape>
     </item>
 </layer-list>
