--- a/app/src/main/res/drawable/button_style.xml
+++ b/app/src/main/res/drawable/button_style.xml
@@ -4,12 +4,12 @@
     <item>
         <shape>
             <gradient
-                android:startColor="#00AB81"
-                android:endColor="#00AB81"
+                android:startColor="#CCCCCC"
+                android:endColor="#CCCCCC"
                 android:angle="270" />
             <stroke
                 android:width="7dp"
-                android:color="#00AB81" />
+                android:color="#CCCCCC" />
             <corners
                 android:radius="3dp" />
             <padding
