--- a/app/src/main/res/layout/item_level.xml
+++ b/app/src/main/res/layout/item_level.xml
@@ -1,21 +1,19 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:card_view="http://schemas.android.com/tools">
     <data>
         <variable name="level" type="com.diezsiete.lscapp.vo.Level"/>
     </data>
 
-    <com.github.captain_miao.optroundcardview.OptRoundCardView
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/level_item"
-        app:cardElevation="2dp"
-        app:optRoundCardCornerRadius="42dp"
-        app:optRoundCardLeftTopCorner="false"
-        app:optRoundCardRightTopCorner="false"
-        app:optRoundCardBottomEdges="false"
-        android:layout_marginLeft="@dimen/spacing_simple"
-        android:layout_marginRight="@dimen/spacing_simple"
-        android:layout_marginBottom="@dimen/spacing_simple"
+        card_view:cardCornerRadius="14dp"
+        android:layout_gravity="center"
+        android:layout_marginLeft="@dimen/spacing_single"
+        android:layout_marginRight="@dimen/spacing_single"
+        android:layout_marginBottom="@dimen/spacing_single"
         >
 
         <LinearLayout
@@ -56,17 +54,29 @@
                 </FrameLayout>
 
             </android.support.v7.widget.ContentFrameLayout>
-            <android.support.v7.widget.AppCompatButton
-                android:id="@+id/btn_goto_level"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="@string/practice"
-                android:textAllCaps="false"
-                android:background="@drawable/button_style"
-                android:textColor="@android:color/white"
-                android:layout_margin="@dimen/spacing_single"
-                />
+            <android.support.v7.widget.ContentFrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <android.support.v7.widget.AppCompatImageButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_medal_gray"
+                    android:layout_gravity="start|center_vertical"
+                    android:layout_margin="@dimen/spacing_single"
+                    android:background="@color/transparent"
+                    />
+                <android.support.v7.widget.AppCompatButton
+                    android:id="@+id/btn_goto_level"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="end"
+                    android:text="@string/practice"
+                    android:textColor="@color/colorPrimary"
+                    android:layout_margin="@dimen/spacing_single"
+                    android:background="@color/transparent"
+                    />
+            </android.support.v7.widget.ContentFrameLayout>
         </LinearLayout>
-    </com.github.captain_miao.optroundcardview.OptRoundCardView>
+
+    </android.support.v7.widget.CardView>
 </layout>
