--- a/app/src/main/res/layout/item_lesson.xml
+++ b/app/src/main/res/layout/item_lesson.xml
@@ -70,9 +70,10 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="end"
                     android:text="@string/practice"
-                    android:textColor="@color/colorPrimary"
+                    android:textColor="@{lessonEntity.available ? @color/colorPrimary : @color/colorDisabled}"
                     android:layout_margin="@dimen/spacing_single"
                     android:background="@color/transparent"
+                    android:enabled="@{lessonEntity.available}"
                     />
             </FrameLayout>
         </LinearLayout>
