--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -25,4 +25,6 @@
     <dimen name="exoplayer_full">250dp</dimen>
     <dimen name="exoplayer_medium">185dp</dimen>
     <dimen name="exoplayer_small">150dp</dimen>
+
+    <dimen name="profile_image_cup">50dp</dimen>
 </resources>
